# user-story-critique

./: .replit  app.py  index.html  pyproject.toml  script.js  styles.css
attached_assets/: prompts.json
static/: prompts.json  script.js  styles.css
templates/: index.html
